Refactor .gitignore to improve exclusion of development files and CI artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-node_modules
-.vscode
-**/*.ts
+# vyhoď dev věci a CI
+.github/**
+.vscode/**
+scripts/**
+test/**
+tests/**
 **/*.map
-*.vsix
+**/*.ts
+**/*.tsx
+**/*.md
+!.*/
+
+# node_modules – VSCE si umí přibalit potřebné prod deps samo
+node_modules/
+
+# cokoliv velkého/zbytečného
+**/*.zip
+**/*.vsix
